# CNC-Production-Shop

./: .gitignore  CLAUDE.md  README.md  TASKSPEC_CNC_PRODUCTION_SHOP.md  pyproject.toml
.github/workflows/: ci.yml
acoustic/: __init__.py
business/: __init__.py
business/bids/: __init__.py  calculator.py  generator.py  models.py  summary.py
business/calculators/: __init__.py  cnc_electricity.py
business/proposals/: __init__.py  generator.py  markdown.py  models.py
cam_assist/: __init__.py  cli.py
docs/adr/: ADR-0001-risk-cost-terminology.md
docs/debt/: DEBT_GATE_DISCOVERY_REPORT.md
exports/proposals/: PROP-ECOLOOM-2026-001.md  PROP-ECOLOOM-PROD-100-2026-001.md  PROP-ECOLOOM-PROD-250-2026-001.md  PROP-ECOLOOM-PROD-500-2026-001.md
fixtures/bids/: eco_loom_production_bid_100_v1.json  eco_loom_production_bid_250_v1.json  eco_loom_production_bid_500_v1.json  eco_loom_production_bid_summary_100_v1.json  eco_loom_production_bid_summary_250_v1.json  eco_loom_production_bid_summary_500_v1.json  eco_loom_prototype_bid_summary_v1.json  eco_loom_prototype_bid_v1.json
fixtures/cnc_cost/: README.md  fretboard_slotting_v1.json  guitar_body_routing_v1.json  hardwood_panel_routing_v1.json  machine_burden_sensitivity_v1.json  pickguard_batch_v1.json
fixtures/eco_loom/: eco_loom_cost_inputs_v1.json  (+1 more)
fretboard/: __init__.py
materials/: __init__.py
parametric/: __init__.py
scripts/: export_proposal.py  validate_bid_fixtures.py  validate_bid_summaries.py  validate_eco_loom_fixture.py  validate_eco_loom_project.py  validate_proposals.py
tests/: test_cam_assist.py
(+44 files in other folders)
