[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cnc-production-shop"
version = "0.1.0"
description = "Integrated platform for CNC lutherie workflows"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Texas Guitar Exchange", email = "thetexasguitarexchange@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
cam-assist = "cam_assist.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cam_assist", "parametric", "fretboard", "materials", "acoustic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
